[api/db] accounts login and logout paths
related to #1 and #2.

--- a/Pipfile
+++ b/Pipfile
@@ -8,10 +8,12 @@ black = "*"
 pytest = "*"
 
 [packages]
-flask = "*"
 peewee = "*"
 psycopg2 = "*"
 python-dateutil = "*"
+flask = "*"
+flask-restful = "*"
+bcrypt = "*"
 
 [requires]
 python_version = "3.7"
