[db] fixes and adds admin user
related to #17, #18, #19, #20, #21, #22, #23

--- a/env.ini.example
+++ b/env.ini.example
@@ -2,3 +2,9 @@
 role=postgres
 password=postgres
 database=fisufba
+
+[admin]
+cpf=000.000.000-00
+password=admin
+display_name=FisUFBA
+email=mail@fisufba.com
