--- a/env.ini.example
+++ b/env.ini.example
@@ -6,7 +6,8 @@ host=localhost
 port=5432
 
 [admin]
-cpf=000.000.000-00
+cpf=00000000000
 password=admin
 display_name=FisUFBA
+phone=000000000000
 email=mail@fisufba.com
